js262/test/language/block-scope/syntax/for-in/disallow-initialization-assignment.js


/*---
es6id: 13.1
description: >
    for declaration:
    disallow initialization assignment
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
for (let x = 3 in {}) { }

